ITEC120/lab20/doc/logfile.txt
Class documentation
<---- javadoc command: ---->
C:\Program Files (x86)\BlueJ\jdk\bin\javadoc.exe
-author
-version
-nodeprecated
-package
-noindex
-notree
-nohelp
-nonavbar
-source
1.7
-classpath
C:\Program Files (x86)\BlueJ\lib\bluejcore.jar;C:\Program Files (x86)\BlueJ\lib\junit-4.8.2.jar;H:\itec120\lab20
-d
H:\itec120\lab20\doc
-encoding
UTF-8
-charset
UTF-8
-docletpath
C:\Program Files (x86)\BlueJ\lib\bjdoclet.jar
-doclet
bluej.doclet.doclets.formats.html.HtmlDoclet
H:\itec120\lab20\TreasureList.java
<---- end of javadoc command ---->
Loading source file H:\itec120\lab20\TreasureList.java...
H:\itec120\lab20\TreasureList.java:52: error: ')' expected
    private void grow(Treasure[] treasure
                                         ^
H:\itec120\lab20\TreasureList.java:53: error: reached end of file while parsing
}
 ^
2 errors
